--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -67,4 +67,8 @@
     }
     .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
         background-color: #c0392b !important;
-    }
+     }
+     /*
+    .signup{
+        height: 100;
+    } */
